name:                nfs
version:             0
synopsis:            NFSv4 client library
description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2017
category:            Network, Filesystem
build-type:          Custom
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1

source-repository head
  type: git
  location: https://github.com/dylex/haskell-nfs

custom-setup
  setup-depends:
    base >=4.8 && <5,
    Cabal,
    ONC-RPC

library
  exposed-modules:
    Network.NFS.V4.Prot
    Network.NFS.V4.Attr
    Network.NFS.V4.Client
    Network.NFS.V4.File
    Network.NFS.V4.Ops
    Network.NFS.V4.String
    Network.NFS.V4
  other-modules:
    Network.NFS.V4.Attr.TH
    Network.NFS.V4.Ops.TH
  default-language: Haskell2010
  ghc-options: -Wall
  x-rpcgen-procedures-unique: true
  build-depends:       
    base >=4.8 && <5,
    bytestring,
    case-insensitive,
    cereal,
    containers,
    filepath,
    network,
    template-haskell >= 2.10,
    text,
    vector,
    ONC-RPC
