name:                oncrpc
version:             0
synopsis:            ONC RPC (aka Sun RPC) and XDR library
description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2017
category:            Network
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1

data-files:
  rpc.x

source-repository head
  type: git
  location: https://github.com/dylex/oncrpc

library
  exposed-modules:
    Data.XDR
    Data.XDR.Array
    Data.XDR.Types
    Data.XDR.Serial
    Data.XDR.Generate
    Network.ONCRPC.Types
    Network.ONCRPC.Prot
    Network.ONCRPC.Client
  other-modules:
    Data.XDR.Specification
    Data.XDR.Parse
    Data.XDR.Reident
    Network.Socket.All
    Network.ONCRPC.RecordMarking
    Network.ONCRPC.Message
  build-depends:       
    base >=4.8 && <5,
    bytestring,
    cereal >=0.5.4,
    containers,
    haskell-src-exts >= 1.18,
    network >= 2.6.3,
    parsec,
    random
  default-language: Haskell2010
  ghc-options: -Wall

executable hsxdrgen
  main-is: hsxdrgen.hs
  build-depends:
    base >=4.8 && <5,
    bytestring,
    cereal >=0.5.4,
    containers,
    haskell-src-exts >= 1.18,
    network >= 2.6.3,
    parsec,
    oncrpc
  default-language: Haskell2010
  ghc-options: -Wall
