name:                oncrpc
version:             0
synopsis:            ONC RPC (aka Sun RPC) and XDR library
description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2017
category:            Network
build-type:          Custom
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1

data-files:
  rpc.x

source-repository head
  type: git
  location: https://github.com/dylex/oncrpc

custom-setup
  setup-depends:
    base >=4.8 && <5,
    bytestring,
    Cabal,
    cereal >=0.5.4,
    containers,
    filepath,
    haskell-src-exts >= 1.18,
    parsec,
    vector

library
  exposed-modules:
    Network.ONCRPC.XDR.Array
    Network.ONCRPC.XDR.Types
    Network.ONCRPC.XDR.Serial
    Network.ONCRPC.XDR.Generate
    Network.ONCRPC.XDR.Cabal
    Network.ONCRPC.XDR
    Network.ONCRPC.Types
    Network.ONCRPC.Prot
    Network.ONCRPC.Client
    Network.ONCRPC
  other-modules:
    Network.Socket.All
    Network.ONCRPC.XDR.Specification
    Network.ONCRPC.XDR.Parse
    Network.ONCRPC.XDR.Reident
    Network.ONCRPC.RecordMarking
    Network.ONCRPC.Message
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:       
    base >=4.8 && <5,
    bytestring,
    Cabal,
    cereal >=0.5.4,
    containers,
    filepath,
    haskell-src-exts >= 1.18,
    network >= 2.6.3,
    parsec,
    random,
    time,
    vector

executable hsrpcgen
  hs-source-dirs: tools
  main-is: hsrpcgen.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base >=4.8 && <5,
    oncrpc
