name:                webdav-nfs
version:             0
synopsis:            WebDAV interface to NFS
description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2017
category:            Web, Network, Filesystem
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1

source-repository head
  type: git
  location: https://github.com/dylex/webdav-nfs

library
  exposed-modules:
  other-modules:
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:       
    base >=4.8 && <5,
    bytestring,
    nfs,
    wai,
    waimwork
