name:                webdav-nfs
version:             0
synopsis:            WebDAV interface to NFS
description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2017
category:            Web, Network, Filesystem
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1

source-repository head
  type: git
  location: https://github.com/dylex/haskell-nfs

library
  exposed-modules:
    Network.WebDAV.NFS
  other-modules:
    Network.WebDAV.XML
    Network.WebDAV.DAV
    Network.WebDAV.NFS.Types
    Network.WebDAV.NFS.Request
    Network.WebDAV.NFS.Response
    Network.WebDAV.NFS.File
    Network.WebDAV.NFS.If
    Network.WebDAV.NFS.Property
    Network.WebDAV.NFS.GET
    Network.WebDAV.NFS.PROPFIND
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:       
    attoparsec,
    base >=4.8 && <5,
    bytestring,
    conduit,
    conduit-extra,
    containers,
    exceptions,
    http-types,
    invertible,
    invertible-conduit,
    mtl,
    network-uri,
    text,
    time,
    transformers,
    wai,
    wai-conduit,
    wai-extra,
    waimwork,
    xml-conduit,
    xml-types,
    ONC-RPC,
    nfs

executable webdavnfs
  hs-source-dirs: server
  main-is: webdavnfs.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base >=4.8 && <5,
    filepath,
    warp,
    ONC-RPC,
    nfs,
    webdav-nfs
